# Fourier

./: CMakeLists.txt  README.md
docs/: 404.html  Gemfile  _config.yml  about.markdown  en.search-data.min.json  index.html  index.markdown  index.xml  sitemap.xml
docs/_posts/: 2021-01-22-Documentation.markdown  2021-01-22-welcome-to-jekyll.markdown
docs/algorithms/: index.html  index.md  index.xml
docs/algorithms/canny/: index.html
docs/categories/: index.xml
docs/getting_started/: index.html  index.xml
docs/js/: en.search.min.33dacb9ccc7a1956eedacf0f38b246572d938dacd347887c769b9554e7bc2ba5.js
docs/tags/: index.xml
hugo_src/: config.toml
hugo_src/content/: _index.md
hugo_src/content/algorithms/: _index.md  canny.md
hugo_src/content/getting_started/: _index.md
hugo_src/themes/hugo-geekdoc/layouts/partials/: foot.html  head.html
hugo_src/themes/hugo-geekdoc/layouts/posts/: single.html
hugo_src/themes/hugo-geekdoc/layouts/shortcodes/: tex.html
src/: Image.cpp  Image.hpp  Kernel.hpp  fourier_PyModule.cpp
test/: basic_test.py  canny_edge_detect.py  gaussian_blur.py
